--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         content="Sai Venkata Rami Reddy Kesari is a Full Stack Python Developer skilled in Django, React, SQL, and Machine Learning.">
 
     <title>Sai Venkata Rami Reddy Kesari | Software Developer</title>
-    <link rel="icon" type="image/png" href="./static/img/logo.png">
-    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
+    <link rel="stylesheet" href="css/styles.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap"
         rel="stylesheet">
@@ -21,7 +21,7 @@
     <!-- ================= INTRO LOADER ================= -->
     <div id="intro">
         <h1 id="typing-name"></h1>
-        <img id="intro-logo" src="./static/img/logo.png" alt="Logo" style="border-radius:50%;">
+        <img id="intro-logo" src="assets/img/logo.png" alt="Logo" style="border-radius:50%;">
     </div>
 
     <!-- ================= NAVBAR ================= -->
@@ -120,7 +120,7 @@
     <footer class="footer reveal">
         <div class="footer-container">
             <div class="footer-left reveal-left">
-                <img src="./static/img/logo.png" alt="Logo" class="footer-logo">
+                <img src="assets/img/logo.png" alt="Logo" class="footer-logo">
                 <h2>K.S.V. Rami Reddy</h2>
                 <p>Passionate Developer | Problem Solver | Tech Explorer</p>
             </div>
