--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="#journey">Journey</a></li>
             <li><a href="#certifications">Certifications</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="https://saivenkataramireddykesari.netlify.app/admin" target="_blank">Admin Login</a></li>
+            <li><a href="https://portfolio-backend-1-iky5.onrender.com/admin/" target="_blank">Admin Login</a></li>
         </ul>
     </nav>
 
